// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it hides boiler house details 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Block
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
        <details
          class="govuk-details"
          data-module="govuk-details"
        >
          <summary
            class="govuk-details__summary"
            data-testid="property-spec-toggle"
          >
            <span
              class="govuk-details__summary-text"
            >
              Property Specification
            </span>
          </summary>
        </details>
        <a
          class="govuk-button lbh-button"
          data-testid="edit-address-button"
          href="/property/edit/769894bd-b0bc-47eb-a780-322372c2448f"
        >
          Edit address details
        </a>
        <hr
          class="lbh-horizontal-bar"
        />
        <aside
          class="mtfh-cautionary-alerts"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            Cautionary alerts
          </h2>
          <p
            class="lbh-body-s"
          >
            None
          </p>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
        <aside
          class="mtfh-patch-details"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            Patch details
          </h2>
          <p
            class="lbh-body-s"
          >
            No patch
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="all-patches-and-areas-button"
            href="/property/all-patches-and-areas"
          >
            All patches and areas
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
        <aside
          class="mtfh-lbh-ownership-info"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
            data-testid="ownership-info-heading"
          >
            Asset ownership
          </h2>
          <p
            class="lbh-body-s"
            data-testid="ownership-info"
          >
            This asset is owned by Hackney Council
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="edit-ownership-info-button"
            href="/property/769894bd-b0bc-47eb-a780-322372c2448f/edit-asset-ownership"
          >
            Edit ownership
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
      </div>
    </div>
  </div>
</div>
`;

exports[`it hides cautionary alerts 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Block
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
        <details
          class="govuk-details"
          data-module="govuk-details"
        >
          <summary
            class="govuk-details__summary"
            data-testid="property-spec-toggle"
          >
            <span
              class="govuk-details__summary-text"
            >
              Property Specification
            </span>
          </summary>
        </details>
        <a
          class="govuk-button lbh-button"
          data-testid="edit-address-button"
          href="/property/edit/769894bd-b0bc-47eb-a780-322372c2448f"
        >
          Edit address details
        </a>
        <hr
          class="lbh-horizontal-bar"
        />
        <aside
          class="mtfh-patch-details"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            Patch details
          </h2>
          <p
            class="lbh-body-s"
          >
            No patch
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="all-patches-and-areas-button"
            href="/property/all-patches-and-areas"
          >
            All patches and areas
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
        <aside
          class="mtfh-lbh-ownership-info"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
            data-testid="ownership-info-heading"
          >
            Asset ownership
          </h2>
          <p
            class="lbh-body-s"
            data-testid="ownership-info"
          >
            This asset is owned by Hackney Council
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="edit-ownership-info-button"
            href="/property/769894bd-b0bc-47eb-a780-322372c2448f/edit-asset-ownership"
          >
            Edit ownership
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
      </div>
    </div>
  </div>
</div>
`;

exports[`it hides tenure information 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Block
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
        <details
          class="govuk-details"
          data-module="govuk-details"
        >
          <summary
            class="govuk-details__summary"
            data-testid="property-spec-toggle"
          >
            <span
              class="govuk-details__summary-text"
            >
              Property Specification
            </span>
          </summary>
        </details>
        <a
          class="govuk-button lbh-button"
          data-testid="edit-address-button"
          href="/property/edit/769894bd-b0bc-47eb-a780-322372c2448f"
        >
          Edit address details
        </a>
        <hr
          class="lbh-horizontal-bar"
        />
        <aside
          class="mtfh-patch-details"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            Patch details
          </h2>
          <p
            class="lbh-body-s"
          >
            No patch
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="all-patches-and-areas-button"
            href="/property/all-patches-and-areas"
          >
            All patches and areas
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
        <aside
          class="mtfh-lbh-ownership-info"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
            data-testid="ownership-info-heading"
          >
            Asset ownership
          </h2>
          <p
            class="lbh-body-s"
            data-testid="ownership-info"
          >
            This asset is owned by Hackney Council
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="edit-ownership-info-button"
            href="/property/769894bd-b0bc-47eb-a780-322372c2448f/edit-asset-ownership"
          >
            Edit ownership
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
      </div>
    </div>
  </div>
</div>
`;

exports[`it shows boiler house details 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Dwelling
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
        <details
          class="govuk-details"
          data-module="govuk-details"
        >
          <summary
            class="govuk-details__summary"
            data-testid="property-spec-toggle"
          >
            <span
              class="govuk-details__summary-text"
            >
              Property Specification
            </span>
          </summary>
        </details>
        <a
          class="govuk-button lbh-button"
          data-testid="edit-address-button"
          href="/property/edit/769894bd-b0bc-47eb-a780-322372c2448f"
        >
          Edit address details
        </a>
        <hr
          class="lbh-horizontal-bar"
        />
        <aside
          class="mtfh-cautionary-alerts"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            Cautionary alerts
          </h2>
          <p
            class="lbh-body-s"
          >
            None
          </p>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
        <aside
          class="mtfh-patch-details"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            Patch details
          </h2>
          <p
            class="lbh-body-s"
          >
            No patch
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="all-patches-and-areas-button"
            href="/property/all-patches-and-areas"
          >
            All patches and areas
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
        <aside
          class="mtfh-lbh-ownership-info"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
            data-testid="ownership-info-heading"
          >
            Asset ownership
          </h2>
          <p
            class="lbh-body-s"
            data-testid="ownership-info"
          >
            This asset is owned by Hackney Council
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="edit-ownership-info-button"
            href="/property/769894bd-b0bc-47eb-a780-322372c2448f/edit-asset-ownership"
          >
            Edit ownership
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
        <aside
          class="mtfh-boiler-house"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            Boiler house
          </h2>
          <a
            class="govuk-button lbh-button"
            href="/property/769894bd-b0bc-47eb-a780-322372c2448f/add-boiler-house"
          >
            Add boiler house 
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
      </div>
    </div>
  </div>
</div>
`;

exports[`it shows cautionary alerts 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Block
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
        <details
          class="govuk-details"
          data-module="govuk-details"
        >
          <summary
            class="govuk-details__summary"
            data-testid="property-spec-toggle"
          >
            <span
              class="govuk-details__summary-text"
            >
              Property Specification
            </span>
          </summary>
        </details>
        <a
          class="govuk-button lbh-button"
          data-testid="edit-address-button"
          href="/property/edit/769894bd-b0bc-47eb-a780-322372c2448f"
        >
          Edit address details
        </a>
        <hr
          class="lbh-horizontal-bar"
        />
        <aside
          class="mtfh-cautionary-alerts"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            Cautionary alerts
          </h2>
          <p
            class="lbh-body-s"
          >
            None
          </p>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
        <aside
          class="mtfh-patch-details"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            Patch details
          </h2>
          <p
            class="lbh-body-s"
          >
            No patch
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="all-patches-and-areas-button"
            href="/property/all-patches-and-areas"
          >
            All patches and areas
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
        <aside
          class="mtfh-lbh-ownership-info"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
            data-testid="ownership-info-heading"
          >
            Asset ownership
          </h2>
          <p
            class="lbh-body-s"
            data-testid="ownership-info"
          >
            This asset is owned by Hackney Council
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="edit-ownership-info-button"
            href="/property/769894bd-b0bc-47eb-a780-322372c2448f/edit-asset-ownership"
          >
            Edit ownership
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
      </div>
    </div>
  </div>
</div>
`;

exports[`it shows tenure information 1`] = `
<div>
  <div
    class="mtfh-asset-sidebar"
  >
    <div
      class="mtfh-sidebar"
    >
      <div
        id="property-view-sidebar"
      >
        <aside
          class="mtfh-asset-details"
        >
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Block
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                UPRN
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                10008355547
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Reference
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                0019062023
              </dd>
            </div>
          </dl>
        </aside>
        <details
          class="govuk-details"
          data-module="govuk-details"
        >
          <summary
            class="govuk-details__summary"
            data-testid="property-spec-toggle"
          >
            <span
              class="govuk-details__summary-text"
            >
              Property Specification
            </span>
          </summary>
        </details>
        <a
          class="govuk-button lbh-button"
          data-testid="edit-address-button"
          href="/property/edit/769894bd-b0bc-47eb-a780-322372c2448f"
        >
          Edit address details
        </a>
        <hr
          class="lbh-horizontal-bar"
        />
        <aside
          class="mtfh-patch-details"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            Patch details
          </h2>
          <p
            class="lbh-body-s"
          >
            No patch
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="all-patches-and-areas-button"
            href="/property/all-patches-and-areas"
          >
            All patches and areas
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
        <aside
          class="mtfh-lbh-ownership-info"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
            data-testid="ownership-info-heading"
          >
            Asset ownership
          </h2>
          <p
            class="lbh-body-s"
            data-testid="ownership-info"
          >
            This asset is owned by Hackney Council
          </p>
          <a
            class="govuk-button lbh-button"
            data-testid="edit-ownership-info-button"
            href="/property/769894bd-b0bc-47eb-a780-322372c2448f/edit-asset-ownership"
          >
            Edit ownership
          </a>
          <hr
            class="lbh-horizontal-bar"
          />
        </aside>
        <aside
          class="mtfh-tenure-details"
          id="tenure-details"
        >
          <h2
            class="lbh-heading-h2 lbh-heading lbh-heading-h3"
          >
            <a
              class="govuk-link lbh-link lbh-link--no-visited-state"
              href="/tenure/c01e3146-e630-c2cd-e709-18ef57bf3724"
            >
              Tenure
            </a>
          </h2>
          <dl
            class="govuk-summary-list govuk-summary-list--no-border lbh-summary-list"
          >
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key govuk-!-width-two-thirds"
              >
                Type
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                N/A
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Status
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                Inactive
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Start date
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                N/A
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                End date
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                N/A
              </dd>
            </div>
            <div
              class="govuk-summary-list__row"
            >
              <dt
                class="govuk-summary-list__key"
              >
                Payment ref.
              </dt>
              <dd
                class="govuk-summary-list__value"
              >
                N/A
              </dd>
            </div>
          </dl>
        </aside>
        <a
          class="govuk-button lbh-button"
          href="/tenure/769894bd-b0bc-47eb-a780-322372c2448f/add"
        >
          New tenure
        </a>
      </div>
    </div>
  </div>
</div>
`;
